--- a/views/checkout.hbs
+++ b/views/checkout.hbs
@@ -2,7 +2,7 @@
 
 <div class='container'>
   <div class='row'>
-    <div class='col-md-6 card'>
+    <div class='col-md-6 card pt-3'>
       <form action='/charges' method='post' class='form-group'>
         <input type='text' name='fname' placeholder='First Name' class='form-control'>
         <input type='text' name='lname' placeholder='Last Name' class='form-control'>
