working on mongoose integration

--- a/views/products/show.handlebars
+++ b/views/products/show.handlebars
@@ -20,6 +20,6 @@
     <h2>Category</h2>
     <p>{{ product.Category.name }}</p>
 
-    <a href="#" class="btn btn-lg btn-primary">Add Me to Shopping Cart!</a>
+    <a href="/cart/{{product.id}}" class="btn btn-lg btn-primary">Add Me to Shopping Cart!</a>
   </div>
 </div>
