main page and product display

--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -29,7 +29,7 @@
 
       {{!-- Links --}}
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{ rootPath }}">Link</a></li>
+        <li><a href="{{ rootPath }}">Shopping Cart</a></li>
       </ul>
 
     </div><!-- /.navbar-collapse -->
