--- a/views/layouts/application.handlebars
+++ b/views/layouts/application.handlebars
@@ -27,10 +27,12 @@
     <link rel="stylesheet" href="/assets/stylesheets/css/style.css">
   </head>
   <body>
-    {{> shared/_nav }}
-    {{> shared/_flash }}
-    <main class="container">
+    <div id="bg-screen">
+      {{> shared/_nav }}
+      {{> shared/_flash }}
+      <main class="container">
       {{{ body }}}
-    </main>
+      </main>
+    </div>
   </body>
 </html>
