--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -1,14 +1,23 @@
 <div class="row text-center">
   <h1>Products</h1>
 </div>
-<!-- <div class="row">
-  <form>
-  </form>
-</div> -->
 <div class="row text-center">
-  <form class="form-inline" action="/" method="POST">
+  <form class="form-inline" action="/products" method="get">
     <div class="form-group">
-      <select class="form-control" name="search[filter][category]">
+      <div class="input-group">
+        <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+        <input type="text" class="form-control" name="search[name]" placeholder="Search..." value="{{productQuery}}">
+      </div>
+    </div>
+    <div class="form-group">
+      <input type="submit" class="btn btn-primary" value="Submit Search">
+    </div>
+  </form>
+</div>
+<div class="row text-center">
+  <form class="form-inline" action="/products" method="get">
+    <div class="form-group">
+      <select class="form-control" name="search[category]">
         {{#setSelect filterCategory}}
         <option value="" selected disabled hidden>Filter by Category</option>
         <option value="">Any Category</option>
@@ -19,7 +28,7 @@
       </select>
     </div>
     <div class="form-group">
-      <select class="form-control" name="search[filter][minPrice]">
+      <select class="form-control" name="search[minPrice]">
         {{#setSelect minPrice}}
         <option value="" selected disabled hidden>Min Price</option>
         <option value="10">10</option>
@@ -31,7 +40,7 @@
       </select>
     </div>
     <div class="form-group">
-      <select class="form-control" name="search[filter][maxPrice]">
+      <select class="form-control" name="search[maxPrice]">
         {{#setSelect maxPrice}}
         <option value="" selected disabled hidden>Max Price</option>
         <option value="50">50</option>
@@ -48,9 +57,9 @@
   </form>
 </div>
 <div class="row text-center">
-  <form class="form-inline" action="/" method="POST">
+  <form class="form-inline" action="/products" method="get">
     <div class="form-group">
-      <select class="form-control" name="search[sort]">
+      <select class="form-control" name="sort">
         {{#setSelect currentSort}}
         <option value="name ASC">Sort By Name Ascending</option>
         <option value="name DESC">Sort By Name Descending</option>
