--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -83,7 +83,7 @@
       <img src="/images/product_image.jpg">
       <div class="caption">
         <p>${{product.price}}</p>
-        <p>{{product.name}}</p>
+        <p><a href="/products/{{product.id}}">{{product.name}}</a></p>
         <p>{{product.Category.name}}</p>
         <button type="button" class="btn btn-primary">Add to Cart</button>
       </div>
