--- a/views/products/show.handlebars
+++ b/views/products/show.handlebars
@@ -2,17 +2,7 @@
   <h1>Product</h1>
 </div>
 <div class="row panel panel-default">
-  <!-- <div class="col-sm-6 media">
-    <div class="media-left">
-      <img src="/images/product_image.jpg" class="media-object">
-    </div>
-    <div class="media-body">
-      <p>{{product.name}}</p>
-      <p>{{product.Category.name}}</p>
-      <p>${{product.price}}</p>
-    </div>
-  </div> -->
-  <div class="col-sm-3">
+  <div class="col-sm-2 col-sm-offset-1">
     <img src="/images/product_image.jpg" class="img-responsive">
   </div>
   <div class="col-sm-3">
