working on shopping cart

--- a/views/welcome/product_display.handlebars
+++ b/views/welcome/product_display.handlebars
@@ -4,6 +4,7 @@
     <img src={{primaryItem.image}} width="70%" height="150px">
   </div>
   <div id="showcase-blurb">
+    <p>{{ session.backUrl }}</p>
     <h5>{{primaryItem.name}}</h3>
     <p>{{primaryItem.description}}</p>
     <p>${{primaryItem.price}}</p>
