--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -85,7 +85,11 @@
         <p>${{product.price}}</p>
         <p><a href="/products/{{product.id}}">{{product.name}}</a></p>
         <p>{{product.Category.name}}</p>
-        <button type="button" class="btn btn-primary">Add to Cart</button>
+        {{#if product.inCart}}
+        <a href="/cart"><button class="btn btn-success">Edit in Cart</button></a>
+        {{else}}
+        <a href="/cart/{{product.id}}?quantity=1"><button class="btn btn-primary">Add to Cart</button></a>
+        {{/if}}
       </div>
     </div>
   </div>
