--- a/views/cart/show.handlebars
+++ b/views/cart/show.handlebars
@@ -12,25 +12,28 @@
     <p>{{product.Category.name}}</p>
     <p>${{product.price}}</p>
   </div>
-  <form action="/cart" method="get">
   <div class="col-sm-3">
-    <input type="number" class="form-control" name="quantity" value="{{product.quantity}}">
+    <form action="/cart/{{product.id}}" method="get">
+      <input type="number" class="form-control" name="quantity" value="{{product.quantity}}">
   </div>
   <div class="col-sm-3">
     <input type="submit" class="btn btn-success" value="Set Quantity">
-    <input type="hidden"
-    <button type="button" class="btn btn-danger">Remove</button>
+    </form>
+    <br><br>
+    <form action="/cart/{{product.id}}" method="get">
+      <input type="hidden" class="form-control" name="quantity" value="0">
+      <input type="submit" class="btn btn-danger" value="Remove">
+    </form>
   </div>
-  </form>
 </div>
 {{/each}}
 
 <div class="row">
-  <div class="col-sm-6">
-    <h3>Total: ${{cart.total}}</h3>
+  <div class="col-sm-9">
+    <h3>Total: ${{total}}.00</h3>
   </div>
-  <div class="col-sm-6">
-    <a href="/cart/clear"><button type="button" class="btn-btn-danger btn-lg">Clear Cart</button></a>
-    <a href="/cart/checkout"><button type="button" class="btn-btn-primary btn-lg">Checkout</button></a>
+  <div class="col-sm-3">
+    <a href="/cart?_method=delete"><button type="button" class="btn btn-danger btn-lg">Clear Cart</button></a>
+    <a href="/cart/checkout"><button type="button" class="btn btn-primary btn-lg">Checkout</button></a>
   </div>
 </div>
