--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -17,10 +17,10 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/products"><span class="glyphicon glyphicon-search"></span></a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-shopping-cart"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-shopping-cart"></span> ({{session.cart.size}})</a>
           <ul class="dropdown-menu">
-            <li><a href="">Cart item</a></li>
-            <li><a href="">Checkout</a></li>
+            <li><a href="/cart">View Cart</a></li>
+            <li><a href="/checkout">Checkout</a></li>
           </ul>
         </li>
         <li><a href="/"><span class="glyphicon glyphicon-dashboard"></span></a></li>
