--- a/views/cart/show.handlebars
+++ b/views/cart/show.handlebars
@@ -34,6 +34,6 @@
   </div>
   <div class="col-sm-3">
     <a href="/cart?_method=delete"><button type="button" class="btn btn-danger btn-lg">Clear Cart</button></a>
-    <a href="/cart/checkout"><button type="button" class="btn btn-primary btn-lg">Checkout</button></a>
+    <a href="/checkout"><button type="button" class="btn btn-primary btn-lg">Checkout</button></a>
   </div>
 </div>
