--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -23,8 +23,8 @@
             <li><a href="/checkout">Checkout</a></li>
           </ul>
         </li>
-        <li><a href="/"><span class="glyphicon glyphicon-dashboard"></span></a></li>
-        <li><a href="/"><span class="glyphicon glyphicon-usd"></span></a></li>
+        <li><a href="/admin/orders"><span class="glyphicon glyphicon-dashboard"></span></a></li>
+        <li><a href="/admin/analytics"><span class="glyphicon glyphicon-usd"></span></a></li>
       </ul>
 
     </div><!-- /.navbar-collapse -->
