--- a/views/checkouts/new.handlebars
+++ b/views/checkouts/new.handlebars
@@ -44,10 +44,10 @@
           </div>
           <div class="form-group row">
             <div class="col-sm-offset-3 col-sm-3">
-              <select class="form-control" name="order[address][state_id]">
+              <select class="form-control" name="order[address][state]">
                 <option value="" selected disabled hidden>State</option>
                 {{#each states as |state|}}
-                <option value="{{state.id}}">{{state.name}}</option>
+                <option value="{{state.name}}">{{state.name}}</option>
                 {{/each}}
               </select>
             </div>
