--- a/views/admin/show.handlebars
+++ b/views/admin/show.handlebars
@@ -21,7 +21,7 @@
           </tr>
           <tr>
             <td>Price</td>
-            <td>{{product.product.price}}</td>
+            <td>${{product.product.price}}.00</td>
           </tr>
           <tr>
             <td>SKU</td>
