--- a/views/checkout.hbs
+++ b/views/checkout.hbs
@@ -1,9 +1,32 @@
-<h1>Checkout</h1>
 
 <div class='container'>
+<h1 class='text-center'>Checkout</h1>
   <div class='row'>
-    <div class='col-md-6 card pt-3'>
+    <div class='col-md-6 offset-md-3 card mt-2'>
+      <table class='table table-striped'>
+        <thead>
+          <th>Product</th>
+          <th>Price</th>
+          <th>Quantity</th>
+          <th>Subtotal</th>
+        </thead>
+      {{#each itemsArr as |item|}}
+      <tr>
+          <td>{{item.[0]}}</td>
+          <td>${{item.[2]}}</td>
+          <td>{{item.[1]}}</td>
+          <td>${{item.[3]}}</td>
+      </tr>
+      {{/each}}
+    </table>
+    </div>
+    <div class='col-md-6 offset-md-3 card my-2'>
+      <h1>Total: ${{total}}</h1>
+    </div>
+    <div class='col-md-6 offset-md-3 card pt-3'>
       <form action='/charges' method='post' class='form-group'>
+        <input type='hidden' name='cartid' value='{{cartID}}'>
+        <input type='hidden' name='orderTotal' value='{{total}}'>
         <input type='text' name='fname' placeholder='First Name' class='form-control'>
         <input type='text' name='lname' placeholder='Last Name' class='form-control'>
         <input type='email' name='email' placeholder='email' class='form-control'>
@@ -60,24 +83,8 @@
           <option value='Wyomin'>Wyomin</option>
         </select>
 
-        <script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key="{{ STRIPE_PK }}" data-amount="100" data-name="Stripe Node Test" data-description="Widget" data-image="https://stripe.com/img/documentation/checkout/marketplace.png" data-locale="auto"></script>
+        <script src="https://checkout.stripe.com/checkout.js" class="stripe-button" data-key="{{stripeKey}}" data-amount="100" data-name="Stripe Node Test" data-description="Widget" data-image="https://stripe.com/img/documentation/checkout/marketplace.png" data-locale="auto"></script>
       </form>
-    </div>
-    <div class='col-md-6'>
-      {{#each itemsArr as |item|}}
-      <div class='row'>
-        <div class='col-md-12 card'>
-          <p>Product: {{item.[0]}}</p>
-          <p>Price: ${{item.[2]}}</p>
-          <p>Quantity: {{item.[1]}}</p>
-          <h6>Subtotal: ${{item.[3]}}</h6>
-        </div>
-      </div>
-      {{/each}}
-    </div>
-    <div class='col-md-6 offset-md-6 card'>
-      <h1>Total:</h1>
-      <h1>${{total}}</h1>
     </div>
   </div>
 </div>
