--- a/views/product.hbs
+++ b/views/product.hbs
@@ -1,58 +1,39 @@
-<div class='float-right'>
-  <form action='/cart' method='get'>
-    <input type='submit' value='Check Cart' class='btn btn-primary'>
-  </form>
-</div>
-<div class="container-fluid">
-  <div class="row">
-    <form class="form-inline" action="/products/search" method="get">
-      <select name="category">
-        <option></option>
+
+<div class='container my-3'>
+  <div class='row'>
+    <div class='col-sm-7 offset-md-3'>
+  <form action='/products/filter' class="form-inline" method='get'>
+      <select name="category" class="form-control">
+        <option value="">Category</option>
 					{{#each categories as |category|}}
 					<option value="{{category.id}}">{{category.name}}</option>
 					{{/each}}
 				</select>
-      <select name="price">
-        <option></option>
-					<option value="1">1</option>
-					<option value="2">2</option>
-					<option value="3">3</option>
-					<option value="4">4</option>
-					<option value="5">5</option>
-					<option value="6">6</option>
-					<option value="7">7</option>
-					<option value="8">8</option>
-					<option value="9">9</option>
-					<option value="10">10</option>
+      <select name="price" class="form-control">
+        <option value="">Price</option>
+					<option value="10">$10</option>
+					<option value="20">$20</option>
+					<option value="30">$30</option>
+					<option value="40">$40</option>
+					<option value="50">$50</option>
 				</select>
-      <select name="min_max">
+      <select name="min_max" class="form-control">
         <option></option>
-					<option value="min">min</option>
 					<option value="max">max</option>
+					<option value="min">min</option>
 				</select>
-      <select name="sort_by">
-        <option></option>
-	<option value="price">price</option>
-	<option value="name">name</option>
-	<option value="createdAt">date</option>
-</select>
-      <select name="asc_desc">
-        <option></option>
-	<option value="ascending">ascending</option>
-	<option value="descending">descending</option>
-</select> Search <input type="text" name="search">
-      <input type="submit" class="btn btn-primary">
-    </form>
-  </div>
+  <input type='submit' value='Filter' class='btn btn-primary'>
+  </form>
+</div>
+</div>
 </div>
 
-<div class="container-fluid">
+<div class="container">
   <div class="row">
     {{#each result as |product|}}
     <div class="col-md-3 card">
-      <img height="40" width="40" src="/images/stock-vector-product-quality-vector-icon-539804044.jpg">
-      <p>Name: <a href='/products/{{product.name}}'>{{product.name}}</a></p>
-      <p>Category: {{product.category}}</p>
+      <p class='mt-2'>Name: <a href='/products/{{product._id}}'>{{product.name}}</a></p>
+      <img height="100" width="100" src="/images/image-placeholder.jpg">
       <p>Price: ${{product.price}}</p>
       <p>Description: {{product.description}}</p>
       <p># in stock: {{product.stock}}</p>
