--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -18,18 +18,21 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            {{{ glyphicon "option-vertical" }}}
-            <span class="caret"></span>
+            <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+            ({{session.totalNum}})
           </a>
           <ul class="dropdown-menu">
-            <li><a href="{{ rootPath }}">Link</a></li>
+            {{#each session.cart as |product|}}
+              <a href="/shoppingCart">
+                <li>{{product.name}} ({{product.quantity}})</li>
+              </a>
+            {{/each}}
           </ul>
         </li>
       </ul>
 
       {{!-- Links --}}
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{ rootPath }}">Shopping Cart</a></li>
       </ul>
 
     </div><!-- /.navbar-collapse -->
