--- a/views/welcome/index.handlebars
+++ b/views/welcome/index.handlebars
@@ -1,4 +1,4 @@
-<form method="get" action="/filter">
+<form method="get" action="/">
   <div class="form-group">
     <div class="input-group">
       <input type=text" name="search" id="search" placeholder="Search by name"/>
