--- a/views/layouts/application.handlebars
+++ b/views/layouts/application.handlebars
@@ -14,6 +14,8 @@
   </head>
   <body>
     {{> shared/_nav }}
+    {{> shared/_flash }}
+    
     <main class="container">
       {{{ body }}}
     </main>
