--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -1,27 +1,39 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">mimirs Market</a>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark" style="height:70px;">
+  <a class="navbar-brand" href="/">
+    <img style="width:36px;" src="/icons/fire.svg">
+  money burner
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Products Index <span class="sr-only">(current)</span></a>
+      <li class="nav-item active mr-3">
+        <a class="nav-link" href="/">
+          <img style="width:26px;" src="/icons/dashboard.svg">
+          <span class="sr-only">(current)</span>
+        </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/admin">Admin <span class="sr-only">(current)</span></a>
+      <li class="nav-item mr-3">
+        <a class="nav-link" href="/admin">
+          <img style="width:26px;" src="/icons/briefcase.svg">
+          <span class="sr-only">(current)</span>
+        </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/analytics">analytics <span class="sr-only">(current)</span></a>
+      <li class="nav-item mr-3">
+        <a class="nav-link" href="/analytics">
+          <img style="width:26px;" src="/icons/graph.svg">
+          <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-         Cart - ( {{cart.quantity}} )
+         <img style="width:26px;" src="/icons/cart.svg">
+         {{cart.quantity}}
        </a>
        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-         <a class="dropdown-item" href="/mycart">My Cart</a>
+         <a class="dropdown-item" href="/mycart"> Go to my cart</a>
          {{#each cart as |item|}}
-          <a class="dropdown-item" href="#">{{item.quantity}} - {{item.name}}</a>
+          <a class="dropdown-item" href="/product/{{item.id}}">{{item.quantity}} - {{item.name}}</a>
          {{/each}}
        </div>
      </li>
