--- a/views/cart/index.handlebars
+++ b/views/cart/index.handlebars
@@ -3,25 +3,34 @@
 <h1>Your cart is empty</h1>
 {{else}}
 {{#each result as |product|}}
-  <div class="row mb-3">
-    <div class="col-sm">
-      <img src="/images/{{ photoId product.id}}.jpg" style="width:320px;" alt="">
-    </div>
-    <div class="col-sm">
-      <h2>{{product.name}}</h2>
-      <h5>{{product.Category.name}}</h5>
-      <h2>${{product.price}}.00</h2>
-    </div>
-    <form class="col-sm" action="/mycart/updateitem" method="post">
 
-      <input type="number" name="quantity" value="{{product.quantity}}">
+  <ul class="list-unstyled">
+    <li class="media">
+      <img class="mr-3" src="/images/{{ photoId product.id}}.jpg" alt="Card image cap" style="width:320px;">
+      <div class="media-body">
+        <h3 class="mt-0 mb-1">{{product.name}}</h3>
+        <h5>{{product.Category.name}}</h5>
+        <h2>${{product.price}}.00</h2>
+        <form class="col-md" action="/mycart/updateitem" method="post">
+          <div class="form-row">
+            <div class="col">
+              <input class="form-control" type="number" name="quantity" value="{{product.quantity}}">
+            </div>
+            <div class="col">
+              <input  class="btn btn-primary form-control" type="submit" name="" value="Update quantity">
+            </div>
+            <div class="col">
+              <a class="btn btn-danger form-control" href="/clear/{{product.id}}">Clear From Cart</a>
+            </div>
 
-      <input type="hidden" name="id" value="{{product.id}}">
-
-      <input class="btn btn-primary" type="submit" name="" value="Update quantity">
-      <a class="btn btn-danger" href="/clear/{{product.id}}">Clear From Cart</a>
-    </form>
-  </div>
+          </div>
+          <div class="form-group">
+          </div>
+          <input  type="hidden" name="id" value="{{product.id}}">
+        </form>
+      </div>
+    </li>
+  </ul>
 {{/each}}
 
 <div class="row">
