--- a/views/layouts/application.handlebars
+++ b/views/layouts/application.handlebars
@@ -10,20 +10,22 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-
+    <!-- my css -->
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     {{> shared/_nav }}
     {{> shared/_flash }}
-    
-    <main class="container">
+
+    <main class="container-fluid">
       {{{ body }}}
+      <hr>
+      <footer class="foot">
+        copyright Greg
+      </footer>
     </main>
 
-    <hr>
-    <footer class="foot">
-      copyright Greg
-    </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
