--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -6,7 +6,7 @@
       <div class="form-row mb-3">
         <div class="col">
           <select name="category" class="form-control" id="category-select" >
-            <option>select category</option>
+            <!-- <option>select category</option> -->
             <option>{{params.category}}</option>
             {{#each categories as |category|}}
             <option>{{category.name}}</option>
